# agent-assembly

./: .dockerignore  .gitignore  .markdownlint.json  .spectral.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RELEASING.md  SECURITY.md  agent-assembly.toml.example  codecov.yml  deny.toml  sonar-project.properties  verification-report-AAASM-118.md  verification-report-AAASM-119.md  verification-report-AAASM-1209.md  verification-report-AAASM-1283.md  verification-report-AAASM-1385.md  verification-report-AAASM-1478.md  verification-report-AAASM-1550.md  verification-report-AAASM-1590.md  verification-report-AAASM-1683.md  verification-report-AAASM-2365.md  verification-report-AAASM-2539.md
aa-api/: Cargo.toml  build.rs
aa-api/src/: embedded_dashboard.rs  error.rs  events.rs  lib.rs  openapi.rs  pagination.rs  replay.rs  server.rs  state.rs  trace_store.rs
aa-api/tests/: admin.rs  agents.rs  agents_detail.rs  alert_rules.rs  alerts.rs  analytics.rs  anomaly_alerts.rs  api_server_banner_ordering.rs  approvals.rs  audit_sandbox_summary.rs  audit_violations.rs  auth_gate.rs  auth_jwt.rs  auth_ws_ticket.rs  capability.rs  connectors.rs  costs.rs  costs_observability.rs  destinations.rs  dispatch_tool.rs  edges.rs  event_broadcast.rs  event_type_filter.rs  fleet_active_sessions.rs  health.rs  http_policy_invalidation.rs  iam.rs  local_auth_from_env.rs  middleware_catch_panic.rs  ops_lifecycle.rs  policies.rs  policy_rbac_integration.rs  replay_buffer.rs  saas_webhook.rs  secret_alerts.rs  serve_local_grpc_loopback_only.rs  serve_local_grpc_registration.rs  serve_local_hardened.rs  serve_local_retention_cron.rs  serve_local_smoke.rs  (+8 more)
aa-auth/: Cargo.toml  README.md
aa-auth/src/: api_key.rs  config.rs  error.rs  gate.rs  lib.rs  rate_limit.rs  scope.rs
aa-cache/: Cargo.toml  README.md
aa-cache/benches/: l1_hit.rs
aa-cache/src/: cached_value.rs  l1.rs  lib.rs  source.rs  testing.rs
aa-cli/: AAASM-4457-error-message-audit.md  Cargo.toml  README.md  build.rs
aa-cli/src/: client.rs  config.rs  lib.rs  sanitize.rs  test_support.rs
aa-cli/tests/: admin_run_retention.rs  agent_cov.rs  agent_suspend_resume.rs  audit_list_export.rs  audit_logs_trace_cov.rs  budget.rs  context_version_misc_cov.rs  cost_cov.rs  dashboard_start.rs  dispatch_cov.rs  dispatch_router_cov.rs  gateway_proxy_cov.rs  permissions.rs  policy_apply.rs  policy_cov.rs  policy_history_simulate_cov.rs  run_command.rs  status_alerts_approvals_cov.rs  topology.rs  topology_render_cov.rs
aa-core/: Cargo.toml  README.md
aa-core/src/: approval.rs  audit.rs  capability.rs  config.rs  lib.rs  llm.rs  net.rs  policy.rs  risk_tier.rs  time.rs
aa-core/tests/: aaasm_2614_reexport_removal_verify.rs  config_acceptance.rs  storage_config_acceptance.rs
aa-devtool/: Cargo.toml
aa-devtool-claude-code/: Cargo.toml
aa-devtool-claude-code/src/: apply.rs  lib.rs  settings.rs
aa-devtool-claude-code/tests/: claude_code_bypass_permissions.rs  settings_merge.rs
aa-devtool-codex/: Cargo.toml
aa-devtool-codex/src/: approval.rs  lib.rs  sandbox.rs
aa-devtool-codex/tests/: wrapper.rs
aa-devtool-contract/: Cargo.toml
aa-devtool-contract/src/: lib.rs
aa-devtool-copilot/: Cargo.toml
aa-devtool-copilot/src/: lib.rs
aa-devtool-saas/: Cargo.toml
aa-devtool-saas/src/: adapter.rs  event.rs  lib.rs  provider.rs  signature.rs
aa-devtool-saas/tests/: integration_overlay.rs  integration_webhook.rs
aa-devtool-windsurf/: Cargo.toml
aa-devtool-windsurf/fixtures/: mcp_settings.json
aa-devtool-windsurf/src/: lib.rs
aa-devtool-windsurf/tests/: contract.rs
aa-devtool/src/: capability_bridge.rs  discovery.rs  lib.rs
aa-ebpf/: Cargo.toml  build.rs
aa-ebpf-common/: Cargo.toml  README.md
aa-ebpf-common/src/: abi.rs  exec.rs  file.rs  lib.rs  syscall.rs
aa-ebpf-probes/: Cargo.toml  rust-toolchain.toml
aa-ebpf-probes/src/: exec_probes.rs  helpers.rs  main.rs  maps.rs  ssl_probes.rs  syscall_guard.rs
aa-ebpf-programs/: Cargo.toml
aa-ebpf/src/: agent_discover.rs  alert.rs  btf_offsets.rs  error.rs  events.rs  integrity.rs  kprobe.rs  lib.rs  loader.rs  maps.rs  ringbuf.rs  tracepoint.rs  uprobe.rs
aa-ffi-go/: Cargo.toml
aa-ffi-node/: Cargo.toml
aa-ffi-python/: Cargo.toml
aa-ffi-python/src/: handle.rs  hooks.rs
aa-gateway/: Cargo.toml  Dockerfile  README.md
aa-gateway/benches/: policy_cascade.rs  policy_check.rs
aa-gateway/migrations/: 20260509000000_approval_routing_config.sql  20260510000001_pending_escalations.sql
aa-gateway/src/: alerts.rs  app_state.rs  audit.rs  audit_consumer.rs  audit_reader.rs  auth.rs  dashboard_server.rs  lib.rs  local_mode.rs  main.rs  message_router.rs  server.rs
aa-gateway/tests/: admin_status_e2e.rs  agent_id_bound_to_token_test.rs  approval_flow_test.rs  approval_routing_lifecycle_test.rs  approval_service_test.rs  audit_channel_test.rs  audit_consumer_e2e.rs  audit_integration_test.rs  audit_lineage_enrichment_test.rs  audit_lineage_persisted_test.rs  audit_lineage_test.rs  audit_seq_recovery_test.rs  audit_service_seq_recovery_test.rs  audit_storage_sink_test.rs  audit_test.rs  audit_trace_context_test.rs  batch_check_credential_validation_test.rs  budget_accrual_test.rs  budget_persistence_test.rs  capability_integration_test.rs  cascade_collect_test.rs  cascade_credential_action_test.rs  cascade_epoch_test.rs  cascade_forged_org_test.rs  cascade_merge_test.rs  cascade_token_owner_lineage_test.rs  cascade_tool_scope_test.rs  cascade_version_test.rs  cross_layer_policy_consistency_test.rs  cross_team_edge_test.rs  edge_langgraph_test.rs  edge_repo_test.rs  edge_store_test.rs  enforcement_mode_self_registration_test.rs  graph_vars_fixture_test.rs  (+31 more)
aa-integration-tests/: Cargo.toml
aa-proto/: Cargo.toml  README.md  build.rs
aa-proxy/: Cargo.toml  Dockerfile  README.md
aa-runtime/: Cargo.toml  Dockerfile  README.md
aa-sandbox/: Cargo.toml  README.md
aa-sdk-client/: Cargo.toml  README.md
aa-security/: Cargo.toml  README.md
aa-storage-memory/: Cargo.toml  README.md
aa-storage-postgres/: Cargo.toml  README.md
(+1923 files in other folders)
