[workspace]
members = [
    "aa-core",
    "aa-storage",
    "aa-storage-memory",
    "aa-storage-redis",
    "aa-cache",
    "aa-storage-postgres",
    "aa-storage-sqlite-buffer",
    "aa-proto",
    "aa-runtime",
    "aa-ebpf",
    "aa-ebpf-common",
    "aa-proxy",
    "aa-ffi-go",
    "aa-ffi-python",
    "aa-ffi-node",
    "aa-wasm",
    "aa-sandbox",
    "aa-gateway",
    "aa-api",
    "aa-cli",
    "conformance",
    "examples/aa-devtool-sample-myeditor",
    "aa-devtool",
    "aa-devtool-claude-code",
    "aa-devtool-codex",
    "aa-devtool-copilot",
    "aa-devtool-saas",
    "aa-devtool-windsurf",
    "aa-integration-tests",
]
# Exclude the sibling `node-sdk/` checkout from this workspace.
# CI checks `node-sdk` out at `$GITHUB_WORKSPACE/node-sdk` (see
# `.github/workflows/ci.yml`) so its `native/aa-ffi-node/Cargo.toml`
# lands under the agent-assembly checkout. Without this exclusion,
# `cargo metadata` fails to read the inner manifest because the outer
# workspace claims the path without listing it as a member, which
# breaks `pnpm native:build` (AAASM-1602).
exclude = ["node-sdk"]
resolver = "2"

[workspace.package]
version = "0.0.1-alpha.5"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/AI-agent-assembly/agent-assembly"
homepage = "https://github.com/AI-agent-assembly/agent-assembly"
authors = ["Agent Assembly Contributors"]

# Single source of version truth for third-party crates shared by two or more
# workspace members (AAASM-2555). Members reference these via `dep = { workspace
# = true }`, layering per-crate `features`/`optional`/`default-features` on top.
# Crates used by a single member, or pinned to a specific version for a
# documented reason (e.g. rusqlite ↔ sqlx-sqlite libsqlite3-sys — AAASM-2374),
# stay declared in that member's manifest.
[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "1.1"
# Error handling
thiserror = "2"
anyhow = "1"
# Async runtime
tokio = "1"
tokio-stream = "0.1"
tokio-util = "0.7"
async-trait = "0.1"
futures = "0.3"

[workspace.lints.clippy]
all = "warn"
correctness = "deny"
suspicious = "deny"
complexity = "warn"
perf = "warn"
style = "warn"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
