[workspace]
members = [
    "aa-core",
    "aa-storage",
    "aa-storage-memory",
    "aa-storage-redis",
    "aa-cache",
    "aa-storage-postgres",
    "aa-storage-sqlite-buffer",
    "aa-proto",
    "aa-runtime",
    "aa-ebpf",
    "aa-ebpf-common",
    "aa-proxy",
    "aa-ffi-go",
    "aa-ffi-python",
    "aa-ffi-node",
    "aa-wasm",
    "aa-sandbox",
    "aa-gateway",
    "aa-api",
    "aa-cli",
    "conformance",
    "examples/aa-devtool-sample-myeditor",
    "aa-devtool",
    "aa-devtool-claude-code",
    "aa-devtool-codex",
    "aa-devtool-copilot",
    "aa-devtool-saas",
    "aa-devtool-windsurf",
    "aa-integration-tests",
]
# Exclude the sibling `node-sdk/` checkout from this workspace.
# CI checks `node-sdk` out at `$GITHUB_WORKSPACE/node-sdk` (see
# `.github/workflows/ci.yml`) so its `native/aa-ffi-node/Cargo.toml`
# lands under the agent-assembly checkout. Without this exclusion,
# `cargo metadata` fails to read the inner manifest because the outer
# workspace claims the path without listing it as a member, which
# breaks `pnpm native:build` (AAASM-1602).
exclude = ["node-sdk"]
resolver = "2"

[workspace.package]
version = "0.0.1-alpha.5"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/AI-agent-assembly/agent-assembly"
homepage = "https://github.com/AI-agent-assembly/agent-assembly"
authors = ["Agent Assembly Contributors"]

# Single source of version truth for third-party crates shared by two or more
# workspace members (AAASM-2555). Members reference these via `dep = { workspace
# = true }`, layering per-crate `features`/`optional`/`default-features` on top.
# Crates used by a single member, or pinned to a specific version for a
# documented reason (e.g. rusqlite ↔ sqlx-sqlite libsqlite3-sys — AAASM-2374),
# stay declared in that member's manifest.
[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "1.1"
# Error handling
thiserror = "2"
anyhow = "1"
# Async runtime
tokio = "1"
tokio-stream = "0.1"
tokio-util = "0.7"
async-trait = "0.1"
futures = "0.3"
# Observability
tracing = "0.1"
tracing-subscriber = "0.3"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
metrics-util = "0.20"
# Protobuf / gRPC
prost = "0.14"
tonic = { version = "0.14", features = ["transport"] }
# HTTP / web
axum = "0.8"
hyper = "1"
http = "1"
tower = { version = "0.5", features = ["util"] }
tower-http = "0.6"
reqwest = { version = "0.12", default-features = false }
utoipa = { version = "5", features = ["axum_extras"] }
tokio-tungstenite = "0.29"
url = "2"
clap = "4"
# TLS / crypto
rustls = "0.23"
tokio-rustls = "0.26"
rcgen = "0.14"
sha2 = "0.11"
hex = "0.4"
hmac = "0.13"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
time = "0.3"
# Data structures / domain
dashmap = "6"
parking_lot = "0.12"
moka = "0.12"
uuid = "1"
rust_decimal = "1"
chrono = "0.4"
chrono-tz = "0.10"
bytes = "1"
# Storage backends
sqlx = { version = "0.8", default-features = false }
redis = { version = "1.2", default-features = false }
async-nats = "0.49"
testcontainers-modules = "0.15"

[workspace.lints.clippy]
all = "warn"
correctness = "deny"
suspicious = "deny"
complexity = "warn"
perf = "warn"
style = "warn"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
