[workspace]
members = [
    "aa-core",
    "aa-security",
    "aa-storage",
    "aa-storage-memory",
    "aa-storage-redis",
    "aa-cache",
    "aa-storage-postgres",
    "aa-storage-sqlite-buffer",
    "aa-proto",
    "aa-runtime",
    "aa-ebpf",
    "aa-ebpf-common",
    "aa-proxy",
    "aa-sdk-client",
    "aa-wasm",
    "aa-sandbox",
    "aa-gateway",
    "aa-api",
    "aa-cli",
    "conformance",
    "examples/aa-devtool-sample-myeditor",
    "aa-devtool",
    "aa-devtool-claude-code",
    "aa-devtool-codex",
    "aa-devtool-copilot",
    "aa-devtool-saas",
    "aa-devtool-windsurf",
    "aa-integration-tests",
]
# Exclude the sibling `node-sdk/` checkout from this workspace.
# CI checks `node-sdk` out at `$GITHUB_WORKSPACE/node-sdk` (see
# `.github/workflows/ci.yml`) so its `native/aa-ffi-node/Cargo.toml`
# lands under the agent-assembly checkout. Without this exclusion,
# `cargo metadata` fails to read the inner manifest because the outer
# workspace claims the path without listing it as a member, which
# breaks `pnpm native:build` (AAASM-1602).
exclude = ["node-sdk"]
resolver = "2"

[workspace.package]
version = "0.0.1-alpha.8"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ai-agent-assembly/agent-assembly"
homepage = "https://github.com/ai-agent-assembly/agent-assembly"
authors = ["Agent Assembly Contributors"]

# Single source of version truth for third-party crates shared by two or more
# workspace members (AAASM-2555). Members reference these via `dep = { workspace
# = true }`, layering per-crate `features`/`optional`/`default-features` on top.
# Crates used by a single member, or pinned to a specific version for a
# documented reason (e.g. rusqlite ↔ sqlx-sqlite libsqlite3-sys — AAASM-2374),
# stay declared in that member's manifest.
[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "1.1"
# Error handling
thiserror = "2"
anyhow = "1"
# Async runtime
tokio = "1"
tokio-stream = "0.1"
tokio-util = "0.7"
async-trait = "0.1"
futures = "0.3"
# Observability
tracing = "0.1"
tracing-subscriber = "0.3"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
metrics-util = "0.20"
# Protobuf / gRPC
prost = "0.14"
tonic = { version = "0.14", features = ["transport"] }
# HTTP / web
axum = "0.8"
hyper = "1"
http = "1"
tower = { version = "0.5", features = ["util"] }
tower-http = "0.6"
reqwest = { version = "0.12", default-features = false }
utoipa = { version = "5", features = ["axum_extras"] }
tokio-tungstenite = "0.29"
url = "2"
clap = "4"
# TLS / crypto
rustls = "0.23"
tokio-rustls = "0.26"
rcgen = "0.14"
sha2 = "0.11"
hex = "0.4"
hmac = "0.13"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
time = "0.3"
# Data structures / domain
dashmap = "6"
parking_lot = "0.12"
moka = "0.12"
uuid = "1"
rust_decimal = "1"
chrono = "0.4"
chrono-tz = "0.10"
bytes = "1"
# Storage backends
# `default-features` is intentionally left at the default (on) here: aa-gateway
# relies on sqlx's default `any` feature, and pinning it off at the workspace
# level split the sqlx-core feature unification. Members that want it off
# (aa-storage-postgres, aa-integration-tests) set `default-features = false`
# themselves, matching their pre-centralization manifests.
sqlx = { version = "0.8" }
redis = { version = "1.2", default-features = false }
async-nats = "0.49"
testcontainers-modules = "0.15"
# Config / system
dirs = "6"
which = "8"
libc = "0.2"
# eBPF (Linux-only; shared by aa-ebpf and the aa-integration-tests e2e suite)
aya = { version = "0.13", features = ["async_tokio"] }
# Dev / test tooling
criterion = "0.8"
proptest = "1"
tempfile = "3"
rstest = "0.26"
wat = "1"
insta = "1"
assert_cmd = "2"

[workspace.lints.clippy]
all = "warn"
correctness = "deny"
suspicious = "deny"
complexity = "warn"
perf = "warn"
style = "warn"

[profile.release]
opt-level = 2
lto = "thin"
codegen-units = 16
strip = true
panic = "abort"

# Size-optimized profile for shipped binaries only (release.yml --profile dist).
# Inherits release (strip + panic=abort) and restores the slowest, smallest
# settings that the default `release` profile used to carry.
[profile.dist]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1

[profile.dev]
# Full debuginfo is a large chunk of link time; line tables keep usable
# backtraces in test failures while shrinking the link.
debug = "line-tables-only"

[profile.dev.package."*"]
# Dependencies are compiled once then cached; they rarely rebuild, so optimizing
# them speeds runtime and dropping their debuginfo shrinks the link, without
# slowing the incremental rebuild of workspace crates.
#
# opt-level = 1 (not 2): level 1 captures most of the runtime win at a fraction
# of the compile cost. Level 2 roughly doubles the *cold* build of heavy deps
# (notably wasmtime via aa-sandbox), which pushes the dev/test `integration-tests`
# job past its 20-minute `timeout-minutes` ceiling. The warm-rebuild win is
# unaffected by this choice — it comes from the debuginfo settings, not dep opt.
opt-level = 1
debug = false
