[package]
name = "aa-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP presentation layer with OpenAPI spec generation for Agent Assembly"

[features]
default = []
connector-pagerduty = []
connector-opsgenie = []

[dependencies]
aa-core = { path = "../aa-core" }
aa-devtool       = { path = "../aa-devtool" }
aa-devtool-saas  = { path = "../aa-devtool-saas" }
aa-gateway = { path = "../aa-gateway" }
aa-proto = { path = "../aa-proto" }
aa-runtime = { path = "../aa-runtime" }
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
dashmap = "6"
http = "1"
hyper = { version = "1", features = ["full"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
rand = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip", "request-id", "util", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
hex = "0.4"
moka = { version = "0.12", features = ["future"] }
rust_decimal = { version = "1", features = ["serde-str"] }
tokio-stream = "0.1"
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
axum-test = "20"
chrono-tz = "0.10"
futures = "0.3"
rstest = "0.26"
serde_json = "1"
tokio-tungstenite = "0.29"
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
