[package]
name = "aa-api"
version.workspace = true
publish = false  # AAASM-2340: not a transitive dep of aa-cli
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP presentation layer with OpenAPI spec generation for Agent Assembly"

[features]
default = []
connector-pagerduty = []
connector-opsgenie = []

[dependencies]
aa-core = { path = "../aa-core" }
aa-security = { path = "../aa-security", features = ["serde"] }
aa-devtool       = { path = "../aa-devtool" }
aa-devtool-saas  = { path = "../aa-devtool-saas" }
aa-gateway = { path = "../aa-gateway" }
aa-proto = { path = "../aa-proto" }
aa-runtime = { path = "../aa-runtime" }
aa-sandbox = { path = "../aa-sandbox" }
argon2 = "0.5"
async-trait = { workspace = true }
axum = { workspace = true, features = ["ws"] }
dashmap = { workspace = true }
http = { workspace = true }
hyper = { workspace = true, features = ["full"] }
jsonwebtoken = { workspace = true }
rand = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace", "cors", "compression-gzip", "request-id", "util", "set-header"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
utoipa = { workspace = true }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
chrono = { workspace = true, features = ["serde"] }
chrono-tz = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
moka = { workspace = true, features = ["future"] }
rust_decimal = { workspace = true, features = ["serde-str"] }
tokio-stream = { workspace = true }
ulid = "1"
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
axum-test = "20"
futures = { workspace = true }
hmac = { workspace = true }
httpmock = "0.8"
rstest = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
tokio-tungstenite = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }

[lints]
workspace = true
