[package]
name = "aa-api"
version.workspace = true
publish = false  # AAASM-2340: not a transitive dep of aa-cli
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP presentation layer with OpenAPI spec generation for Agent Assembly"

[features]
default = []
connector-pagerduty = []
connector-opsgenie = []

[dependencies]
aa-core = { path = "../aa-core" }
aa-auth = { path = "../aa-auth" }
aa-security = { path = "../aa-security", features = ["serde"] }
aa-devtool       = { path = "../aa-devtool" }
aa-devtool-saas  = { path = "../aa-devtool-saas" }
aa-gateway = { path = "../aa-gateway" }
aa-proto = { path = "../aa-proto" }
aa-runtime = { path = "../aa-runtime" }
aa-sandbox = { path = "../aa-sandbox" }
argon2 = "0.5"
async-trait = { workspace = true }
axum = { workspace = true, features = ["ws"] }
dashmap = { workspace = true }
http = { workspace = true }
hyper = { workspace = true, features = ["full"] }
jsonwebtoken = { workspace = true }
rand = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { workspace = true, features = ["rustls", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace", "cors", "compression-gzip", "request-id", "util", "set-header", "catch-panic"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
utoipa = { workspace = true }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
chrono = { workspace = true, features = ["serde"] }
chrono-tz = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
# AAASM-4517: embed the dashboard SPA into `aa-api-server` so a bare release
# tarball serves the UI at GET / with no adjacent dashboard/dist. `include_dir!`
# bakes _embedded/dashboard/dist (staged by build.rs / release.yml) into the
# binary; `tempfile` extracts it at boot for the ServeDir-based SPA router.
include_dir = "0.7"
moka = { workspace = true, features = ["future"] }
tempfile = { workspace = true }
rust_decimal = { workspace = true, features = ["serde-str"] }
tokio-stream = { workspace = true, features = ["net"] }
tokio-util = { workspace = true }
# AAASM-4447: serve the gRPC AgentLifecycleService on loopback :50051 in local
# mode so SDK agent registration reaches the same process the dashboard reads.
tonic = { workspace = true }
ulid = "2"
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
# AAASM-3980: WS tenant-isolation tests construct AuditEvent to set team_id.
aa-proto = { path = "../aa-proto" }
axum-test = "21"
futures = { workspace = true }
hmac = { workspace = true }
httpmock = "0.8"
rstest = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio-tungstenite = { workspace = true }
aa-sdk-client = { path = "../aa-sdk-client" }
tower = { workspace = true }

[lints]
workspace = true
