[package]
name = "aa-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP authentication and authorization framework for Agent Assembly — API keys, JWTs, scopes, rate limiting, and the deny-by-default auth gate. Leaf crate with no aa-core/aa-gateway dependency."

[dependencies]
argon2 = "0.5"
axum = { workspace = true }
dashmap = { workspace = true }
http = { workspace = true }
jsonwebtoken = { workspace = true }
rand = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }

[lints]
workspace = true
