[package]
name = "aa-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "In-process L1 cache wrapper (DashMap + TTL + stampede protection) for the Agent Assembly storage traits"

[dependencies]
aa-core = { path = "../aa-core", version = "0.0.1-rc.4" }
async-trait = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
# Self dev-dependency: turns on `test-utils` for this crate's own bench build so
# `MemoryPolicyStore` is available, without exposing it to downstream consumers.
aa-cache = { path = ".", features = ["test-utils"] }

[features]
# Exposes the in-memory `MemoryPolicyStore` test/bench double. Off by default so
# downstream consumers never pull the test scaffolding; enabled for this crate's
# own benches via the self dev-dependency below.
test-utils = ["tokio/time"]

[[bench]]
name = "l1_hit"
harness = false

[lints]
workspace = true
