[package]
name = "aa-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "aasm — command-line tool for Agent Assembly"

[[bin]]
name = "aasm"
path = "src/main.rs"

[dependencies]
aa-core              = { path = "../aa-core", version = "0.0.1-alpha.3" }
aa-devtool           = { path = "../aa-devtool", version = "0.0.1-alpha.3" }
aa-devtool-codex     = { path = "../aa-devtool-codex", version = "0.0.1-alpha.3" }
aa-devtool-windsurf  = { path = "../aa-devtool-windsurf", version = "0.0.1-alpha.3" }
aa-gateway           = { path = "../aa-gateway", version = "0.0.1-alpha.3" }
aa-proxy             = { path = "../aa-proxy", version = "0.0.1-alpha.3" }
anyhow         = "1"
async-trait    = "0.1"
axum           = "0.8"
chrono         = { version = "0.4", features = ["serde"] }
clap           = { version = "4", features = ["derive", "env"] }
clap_complete  = "4"
colored        = "3"
csv            = "1"
comfy-table    = "7"
console        = "0.16"
crossterm      = "0.29"
dirs           = "6"
futures-util   = "0.3"
hex            = "0.4"
include_dir    = "0.7"
libc           = "0.2"
mime_guess     = "2"
open           = "5"
owo-colors     = "4"
ratatui        = { version = "0.30", features = ["crossterm"] }
reqwest        = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
serde_yaml     = "0.9"
thiserror      = "2"
tokio          = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
url            = "2"
uuid           = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
assert_cmd     = "2"
tempfile       = "3"
wiremock       = "0.6"

[lints]
workspace = true
