[package]
name = "aa-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "aasm — command-line tool for Agent Assembly"

[[bin]]
name = "aasm"
path = "src/main.rs"

[dependencies]
aa-core              = { path = "../aa-core", version = "0.0.1-alpha.5" }
# strip-for-publish:begin devtool
# AAASM-2340: these three deps wire `aasm run` + `aasm tools` to the
# `aa-devtool*` adapter crates. The dev-tool subsystem isn't ready to
# ship in this alpha, so `.ci/strip-for-publish.sh` removes this region
# (and the source files that consume it) before `cargo workspaces publish`
# runs. Source builds keep the full surface — no edits required to
# develop on `aasm run` / `aasm tools` locally.
aa-devtool           = { path = "../aa-devtool", version = "0.0.1-alpha.5" }
aa-devtool-codex     = { path = "../aa-devtool-codex", version = "0.0.1-alpha.5" }
aa-devtool-windsurf  = { path = "../aa-devtool-windsurf", version = "0.0.1-alpha.5" }
# strip-for-publish:end devtool
aa-gateway           = { path = "../aa-gateway", version = "0.0.1-alpha.5" }
aa-proxy             = { path = "../aa-proxy", version = "0.0.1-alpha.5" }
aa-sandbox           = { path = "../aa-sandbox", version = "0.0.1-alpha.5" }
aa-storage           = { path = "../aa-storage", version = "0.0.1-alpha.5" }
aa-storage-memory    = { path = "../aa-storage-memory", version = "0.0.1-alpha.5" }
aa-storage-redis     = { path = "../aa-storage-redis", version = "0.0.1-alpha.5" }
anyhow         = "1"
async-trait    = "0.1"
axum           = "0.8"
chrono         = { version = "0.4", features = ["serde"] }
clap           = { version = "4", features = ["derive", "env"] }
clap_complete  = "4"
colored        = "3"
csv            = "1"
comfy-table    = "7"
console        = "0.16"
crossterm      = "0.29"
dirs           = "6"
futures-util   = "0.3"
hex            = "0.4"
include_dir    = "0.7"
libc           = "0.2"
mime_guess     = "2"
open           = "5"
owo-colors     = "4"
ratatui        = { version = "0.30", features = ["crossterm"] }
reqwest        = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
serde_yaml     = "0.9"
thiserror      = "2"
tokio          = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
toml           = "1.1"
url            = "2"
uuid           = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
assert_cmd     = "2"
tempfile       = "3"
wiremock       = "0.6"

[lints]
workspace = true
