[package]
name = "aa-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "aasm — command-line tool for Agent Assembly"

[[bin]]
name = "aasm"
path = "src/main.rs"

[dependencies]
aa-core              = { path = "../aa-core", version = "0.0.1-rc.1" }
aa-security          = { path = "../aa-security", version = "0.0.1-rc.1", features = ["serde"] }
# strip-for-publish:begin devtool
# AAASM-2340: these three deps wire `aasm run` + `aasm tools` to the
# `aa-devtool*` adapter crates. The dev-tool subsystem isn't ready to
# ship in this alpha, so `.ci/strip-for-publish.sh` removes this region
# (and the source files that consume it) before `cargo workspaces publish`
# runs. Source builds keep the full surface — no edits required to
# develop on `aasm run` / `aasm tools` locally.
aa-devtool           = { path = "../aa-devtool", version = "0.0.1-rc.1" }
aa-devtool-codex     = { path = "../aa-devtool-codex", version = "0.0.1-rc.1" }
aa-devtool-windsurf  = { path = "../aa-devtool-windsurf", version = "0.0.1-rc.1" }
# strip-for-publish:end devtool
aa-gateway           = { path = "../aa-gateway", version = "0.0.1-rc.1" }
aa-proxy             = { path = "../aa-proxy", version = "0.0.1-rc.1" }
aa-sandbox           = { path = "../aa-sandbox", version = "0.0.1-rc.1" }
aa-storage           = { path = "../aa-storage", version = "0.0.1-rc.1" }
aa-storage-memory    = { path = "../aa-storage-memory", version = "0.0.1-rc.1" }
aa-storage-redis     = { path = "../aa-storage-redis", version = "0.0.1-rc.1" }
anyhow         = { workspace = true }
async-trait    = { workspace = true }
axum           = { workspace = true }
chrono         = { workspace = true, features = ["serde"] }
clap           = { workspace = true, features = ["derive", "env"] }
clap_complete  = "4"
colored        = "3"
csv            = "1"
comfy-table    = "7"
console        = "0.16"
crossterm      = "0.29"
dirs           = { workspace = true }
futures-util   = "0.3"
hex            = { workspace = true }
include_dir    = "0.7"
libc           = { workspace = true }
mime_guess     = "2"
open           = "5"
owo-colors     = "4"
ratatui        = { version = "0.30", features = ["crossterm"] }
reqwest        = { workspace = true, features = ["rustls-tls", "json", "blocking"] }
serde          = { workspace = true }
serde_json     = { workspace = true }
serde_yaml     = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots"] }
toml           = { workspace = true }
url            = { workspace = true }
uuid           = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
assert_cmd     = { workspace = true }
tempfile       = { workspace = true }
wiremock       = "0.6"

[lints]
workspace = true
