[package]
name = "aa-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure domain logic for Agent Assembly — no_std compatible"

[dependencies]
aa-security  = { path = "../aa-security", version = "0.0.1-alpha.5", optional = true }
async-trait  = { version = "0.1", optional = true }
cfg-if       = "1"
chrono       = { version = "0.4", default-features = false, features = ["clock"], optional = true }
dirs         = { version = "6", optional = true }
schemars     = { version = "1", optional = true }
serde        = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
serde_json   = { version = "1", optional = true }
serde_yaml   = { version = "0.9", optional = true }
sha2         = { version = "0.11", default-features = false, optional = true }
thiserror    = { version = "2", optional = true }

[features]
default    = ["std"]
std        = ["alloc", "dep:aa-security", "dep:async-trait", "dep:thiserror", "dep:chrono", "dep:dirs", "dep:serde_json", "dep:serde_yaml", "serde?/std"]
alloc      = ["dep:sha2"]
serde      = ["dep:serde", "aa-security?/serde"]
schemars   = ["dep:schemars"]
test-utils = []

[dev-dependencies]
criterion  = { version = "0.8", features = ["html_reports"] }
proptest   = "1"
serde_json = "1"
# Self dev-dependency: turns on `serde` + `schemars` for aa-core's own test
# build so the `types::` property tests and JsonSchema derives compile and run
# under `cargo nextest run -p aa-core` without making those features default
# for downstream consumers.
aa-core    = { path = ".", features = ["serde", "schemars"] }

[[bench]]
name    = "scanner_bench"
harness = false

[lints]
workspace = true
