[package]
name = "aa-devtool-claude-code"
version.workspace = true
publish = false  # AAASM-2340: not a transitive dep of aa-cli
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DevToolAdapter implementation for Anthropic Claude Code CLI"

[dependencies]
aa-devtool-contract = { path = "../aa-devtool-contract" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
docker-integration = []

[dev-dependencies]
axum = { workspace = true }
insta = { workspace = true, features = ["json"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync"] }

[lints]
workspace = true
