[package]
name = "aa-devtool-codex"
version.workspace = true
publish = false  # AAASM-2340: dev-tool subsystem held back from this alpha — user directive
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DevToolAdapter implementation for the OpenAI Codex CLI (AAASM-202 / F75)."

[dependencies]
aa-core      = { path = "../aa-core", version = "0.0.1-alpha.6", features = ["std", "alloc", "serde"] }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
which        = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
