[package]
name = "aa-devtool-copilot"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DevToolAdapter for GitHub Copilot — VS Code settings alignment and MCP governance (AAASM-203)"
publish = false

[dependencies]
aa-core      = { path = "../aa-core", features = ["std", "serde"] }
async-trait  = "0.1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["macros", "rt"] }

[lints]
workspace = true
